syntax = "proto3";
package rentCar;
option go_package = "service/proto/gen/go;trippb";

// 生成
// protoc -I=. --go_out=paths=source_relative:gen/go trip.proto
// protoc -I=. --go_out=paths=source_relative:gen/go --go-grpc_out=paths=source_relative:gen/go trip.proto

message Location {
  double latitude = 1;
  double longitude = 2;
}

enum TripStatus {
  TS_NOT_SPECIFIED = 0;
  NOT_STARTED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
  PAID = 4;
}

message Trip {
  string start = 1;
  Location start_pos = 5;
  string end = 2;
  Location end_pos = 6;
  repeated Location path_pos = 7;
  int32 duration_sec = 3;
  int32 fee_cent = 4;
  TripStatus status = 8;
  string id = 9;
}

message GetTripRequest {
  string id = 1;
}

service TripService {
  rpc GetTrip (GetTripRequest) returns (Trip);
}